Fix rich editor layout when overflow screen

--- a/server/resources/static/styles.css
+++ b/server/resources/static/styles.css
@@ -29,6 +29,12 @@
 
 html, body {
     margin: 0;
+    /*top: 0;*/
+    /*bottom: 100%;*/
+    /*left: 0;*/
+    /*right: 100%;*/
+    width: 100%;
     height: 100%;
-    overflow: hidden
+    overflow: clip;
+    /*position: fixed;*/
 }
